--- a/index.html
+++ b/index.html
@@ -133,6 +133,87 @@
         </div>
       </div>
     </section>
-    <br />
+
+    <footer>
+      <div class="pre-footer">
+        <h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
+        <p>Be the first to get our latest news and updates</p>
+        <input
+          type="email"
+          placeholder="Your email"
+          name="Mail"
+          id="mail"
+          required
+        />
+        <button class="submit-btn" type="submit" id="mail">
+          <a href="#">SUBSCRIBE</a>
+        </button>
+      </div>
+
+      <div class="main-footer">
+        <div class="img-box">
+          <img
+            src="https://res.cloudinary.com/ademolamadelewi/image/upload/f_auto,q_auto/v1610470933/farmers/Elfrique_logo_to_be_used_-removebg-preview_1_bxgt6r.png"
+            alt=""
+            srcset=""
+          />
+        </div>
+
+        <div>
+          <section>
+            <h2>legal</h2>
+            <ul>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>company</h2>
+          </section>
+        </div>
+
+        <div>
+          <section>
+            <h2>quick link</h2>
+            <ul>
+              <li><a href="#">Voting Contests</a></li>
+              <li><a href="#">Trivia System</a></li>
+              <li><a href="#">Event Tickets</a></li>
+              <li><a href="#">Event Vendors</a></li>
+              <li><a href="#">Event Forms</a></li>
+              <li><a href="#">Travels & Tours</a></li>
+            </ul>
+          </section>
+
+          <section>
+            <h2>contact</h2>
+            <ul>
+              <li>Voice Call:</li>
+              <li>
+                <a href="tel:2349076320109" target="_blank">+2349076320109</a>
+              </li>
+              <li>Whatsapp Only:</li>
+              <li>
+                <a href="https://wa.me/2347025302018" target="_blank"
+                  >+234.702.530.2018</a
+                >
+              </li>
+              <li>Email Address:</li>
+              <li>
+                <a href="mailto:adebeams@gmail.com" target="_blank"
+                  >adebeams@gmail.com</a
+                >
+              </li>
+            </ul>
+          </section>
+        </div>
+
+        <p style="margin: 0 auto">
+          © Copyright 2022 AdeDevs | Technology by
+          <a href="https://linktr.ee/adedevs" target="_blank">AdeDevs</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
